--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Painel Bot WhatsApp</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="<script src="js/app.js"></script>"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     .barra-topo {
       display: flex;
@@ -67,6 +67,7 @@
   </div>
 
   <div class="grid" id="painel"></div>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
+
