--- a/index.html
+++ b/index.html
@@ -2,71 +2,37 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Painel Bot WhatsApp</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    .barra-topo {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      gap: 15px;
-      margin-bottom: 8px;
-    }
-    .topo-esquerda {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-    .topo-centro {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-    .grafico-mini {
-      width: 350px;
-      height: 60px;
-      margin-left: 12px;
-      background: #fff;
-      border-radius: 8px;
-      padding: 4px 6px;
-    }
-    @media (max-width: 1000px) {
-      .barra-topo { flex-direction: column; align-items: flex-start; }
-      .grafico-mini { width: 100vw; min-width: 180px; max-width: 99vw; }
-    }
-  </style>
 </head>
 <body>
-  <div class="barra-topo">
-    <div class="topo-esquerda">
-      <span id="ultima-atualizacao">
-        <strong>Última Atualização:</strong> <span id="hora-atual">--:--</span>
-      </span>
-      <span>
-        <strong>Total:</strong> <span id="total-contatos">0</span> &nbsp;
-        <strong>Bot Ativos:</strong> <span id="bots-ativos">0</span>
-      </span>
+  <div class="top-controls">
+    <div class="esquerda">
+      <span class="atualizacao"><strong>Última Atualização:</strong> <span id="hora-atual">--:--</span></span>
+      <span style="margin-left:16px;"><strong>Total:</strong> <span id="total-contatos">0</span></span>
+      <span style="margin-left:16px;"><strong>Bot Ativos:</strong> <span id="bots-ativos">0</span></span>
     </div>
-    <div class="topo-centro">
-      <input id="busca" type="text" placeholder="🔍 Buscar por nome ou número..." />
-      <button id="btn-recarregar" title="Recarregar">🔄</button>
+    <div class="busca-cidade">
+      <input type="text" id="busca" placeholder="🔍 Buscar por nome ou número...">
       <select id="filtro-cidade"></select>
-      <div class="grafico-mini">
-        <canvas id="grafico-cidades"></canvas>
-      </div>
+      <span id="contatos-cidade" style="margin-left:12px;color:#007bff;font-weight:bold"></span>
     </div>
   </div>
 
-  <div class="barra-controle">
-    <button class="filtro ativo" data-filtro="todos">🗂️ Todos</button>
-    <button class="filtro" data-filtro="bot">✅ Bot Ativo</button>
-    <button class="filtro" data-filtro="humano">❌ Bot Desligado</button>
+  <div class="filtros-modo">
+    <button class="filtro ativo" data-filtro="todos">Todos</button>
+    <button class="filtro" data-filtro="bot">Bot</button>
+    <button class="filtro" data-filtro="humano">Humano</button>
   </div>
 
-  <div class="grid" id="painel"></div>
+  <div class="grafico-cidade">
+    <canvas id="grafico-cidades" height="70"></canvas>
+  </div>
+
+  <div id="painel"></div>
+
   <script src="js/app.js"></script>
 </body>
 </html>
