--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+  <h1 id="titulo-painel">🟢 Painel Bot WhatsApp</h1>
   <div class="top-controls">
     <div class="esquerda">
       <span class="atualizacao"><strong>Última Atualização:</strong> <span id="hora-atual">--:--</span></span>
