--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <h1 id="titulo-painel">🟢 Painel Bot WhatsApp</h1>
 <div class="top-controls">
-  <div class="esquerda">
-    <span class="atualizacao"><strong>Última Atualização:</strong> <span id="hora-atual">--:--</span></span>
-    <span style="margin-left:16px;"><strong>Total:</strong> <span id="total-contatos">0</span></span>
-    <span style="margin-left:16px;"><strong>Bot Ativos:</strong> <span id="bots-ativos">0</span></span>
-  </div>
+ <div class="esquerda">
+  <span class="atualizacao"><strong>Última Atualização:</strong> <span id="hora-atual">--:--</span></span>
+  <span><strong>Total:</strong> <span id="total-contatos">0</span></span>
+  <span><strong>Bot Ativos:</strong> <span id="bots-ativos">0</span></span>
+</div>
   <div class="busca-cidade">
     <input type="text" id="busca" placeholder="🔍 Buscar por nome ou número...">
     <select id="filtro-cidade"></select>
